[build-system]
requires = [
    "setuptools>=68.0.0",
    "wheel",
    "aiohttp>=3.9.3",
    "awsiotsdk>=1.21.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "cleanpay_rest_api"
version = "0.0.1"
authors = [
  { name="Keith Laban"},
]
description = "CleanPay App Rest Api Wrapper"
readme = "README.md"
#requires-python = ">=3.12.0, <4"
dependencies = [
    "aiohttp>=3.8.1",
    "awsiotsdk>=1.16.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
]
keywords = [
]

[project.urls]
